    + [NT] Also classify lib*-cli-dev as belonging to the section
      cli-mono (rather than libdevel).  Thanks to Chow Loong Jin
      for the report and the patch.  (Closes: #675358)
  * checks/files{,.desc}:
    + [NT] Rename run-parts-cron-filename-contains-full-stop and
      have it catch "+" in the filename as well.  Add reference
      to policy 9.5.1 in the  tag description.
  * checks/shared-libs:
    + [NT] Reverse order of two subst expressions to prevent
      dev-pkg-without-shlib-symlink false positives.  Thanks to
      Aurelien Jarno, Yves-Alexis Perez and Stephen M. Webb for
      the reports and the patch.
      (Closes: #675826, #677310, #675832)
    + [NT] Clarify that dev-pkg-without-shlib-symlink is emitted
      on library and not "-dev" packages.

  * collection/hardening-info:
    + [NT] Process binaries with hardening-check via xargs.  This
      greatly reduces the processing time for packages with many
      binaries (like some of the linux binaries).  Thanks to
      Bastian Blank for the heads up.
    + [NT] Skip kernel modules (.ko files).
  * collection/hardening-info-helper:
    + [NT] New file.

  * data/*:
    + [NT] Refresh with tools/data from sid.
  * data/scripts/interpreters:
    + [NT] Replace ngp2 with ngraph.  Thanks to Koichi Akabe for
      the report.  (Closes: #675139)
  * data/spelling/corrections:
    + [NT] Add corrections for usage, invocation(s) and ancient.

  * debian/changelog:
    + [NT] raster-image-in-scalable-directory was added in 2.5.7,
      not removed.

  * frontend/lintian{,-info}:
    + [NT] Remove assumption that $ENV{HOME} is set/defined.  If
      $ENV{HOME} is not sent, user specific profiles will simply
      be ignored.
  * frontend/lintian:
    + [NT] Attempt to automatically determine what to process, if
      no packages are given and debian/changelog exists.  Thanks
      to Gilles Filippini for the suggestion.  (Closes: #676799)

  * lib/Lintian/Collect/Package.pm: